[typo] fixing typo in about pg

--- a/blog/About.mdx
+++ b/blog/About.mdx
@@ -1,6 +1,6 @@
 This project exists for the benefit of the Church. We love the reformed heritage as it is laid out in the confessions and catechisms of the 16th and 17th centuries because we believe they faithfully communicate to us the majesty our our God and the accurate teaching of Holy Scripture. The intent of this application is to help you grow in your knowledge, and therefore in your love, of our Triune God.
 
-The main functionality that this application brings in distinction from other projects is the ability to search the confessions of faith by scripture or scripture reference. For example, a search for ["John 3:16"](https://confessionalchristianity.com/?search=John+3%3A16) will yield results similar to ["should not perish but have eternal life"](https://confessionalchristianity.com/?search=should+not+perish+but+have+eternal+life). You may also search by [keywords across all documents](https://confessionalchristianity.com/?search=baptism), [keyword filtered by a document](https://confessionalchristianity.com/?search=document:WCF%20baptism), or of course you can also [read through the a document bit by bit](https://confessionalchristianity.com/?search=document:WCF%20chapter:3).
+The main functionality that this application brings in distinction from other projects is the ability to search the confessions of faith by scripture or scripture reference. For example, a search for ["John 3:16"](https://confessionalchristianity.com/?search=John+3%3A16) will yield results similar to ["should not perish but have eternal life"](https://confessionalchristianity.com/?search=should+not+perish+but+have+eternal+life). You may also search by [keywords across all documents](https://confessionalchristianity.com/?search=baptism), [keyword filtered by a document](https://confessionalchristianity.com/?search=document:WCF%20baptism), or of course you can also [read through a document bit by bit](https://confessionalchristianity.com/?search=document:WCF%20chapter:3).
 
 ## Our Content
 While we acknowledge the bounds of confessional christianity extends beyond the reformed tradition, it is for good reason that the age of the protestant reformation is considered [the age of confessionalism](https://www.britannica.com/place/Germany/The-confessional-age-1555-1648). At this time, this site includes the following historic documents from this time period:
