--- a/blog/About.mdx
+++ b/blog/About.mdx
@@ -1,9 +1,10 @@
-This project exists for the benefit of the Church. We love the reformed heritage as it is laid out in the confessions and catechisms of the 16th and 17th centuries because we believe they faithfully communicate to us the majesty our our God and the accurate teaching of Holy Scripture. The intent of this application is to help you grow in your knowledge, and therefore in your love, of our Triune God.
+Our Ascended Lord has given precious gifts to his Church over the centuries in the shepherds and teachers of Holy Scripture. They are given so the Church would grow to [maturity; that is, to possess the knowledge of God's Son, to the measure of the stature of the fullness of Christ](https://biblehub.com/ephesians/4-13.htm). The confessions of the 16th and 17th centuries are properly understood as fruit of the Church's labor over the centuries to make mature disciples of Christ. These words have been shaped by Scripture into the doctrinal standard of Churches throughout the world. They are a faithful example of the ["pattern of sound words"](https://biblehub.com/2_timothy/1-13.htm) which Paul exhorted Timothy to follow. The Church's calling is to confess Christ. These words have been used to this glorious end throughout the centuries. The intent of this project is a modest one -- to assist the Church as she continues to faithfully carry out this task in the 21st Century and beyond.
 
-The main functionality that this application brings in distinction from other projects is the ability to search the confessions of faith by scripture or scripture reference. For example, a search for ["John 3:16"](https://confessionalchristianity.com/?search=John+3%3A16) will yield results similar to ["should not perish but have eternal life"](https://confessionalchristianity.com/?search=should+not+perish+but+have+eternal+life). You may also search by [keywords across all documents](https://confessionalchristianity.com/?search=baptism), [keyword filtered by a document](https://confessionalchristianity.com/?search=document:WCF%20baptism), or of course you can also [read through a document bit by bit](https://confessionalchristianity.com/?search=document:WCF%20chapter:3).
+## Our Main Features
+The main functionality this application brings in distinction from other projects is searching by Scripture text or citation. For example, a search for ["John 3:16"](https://confessionalchristianity.com/?search=John+3%3A16) or ["should not perish but have eternal life"](https://confessionalchristianity.com/?search=should+not+perish+but+have+eternal+life) will show where this Scripture is referenced as a citation. You may also search by [keywords or phrases across all documents](https://confessionalchristianity.com/?search=baptism), [keywords or phrases filtered by a document](https://confessionalchristianity.com/?search=document:WCF%20baptism), or of course you can [read through a document bit by bit](https://confessionalchristianity.com/?search=document:WCF%20chapter:3).
 
 ## Our Content
-While we acknowledge the bounds of confessional christianity extends beyond the reformed tradition, it is for good reason that the age of the protestant reformation is considered [the age of confessionalism](https://www.britannica.com/place/Germany/The-confessional-age-1555-1648). At this time, this site includes the following historic documents from this time period:
+While we acknowledge the bounds of confessional christianity extends beyond the reformed tradition, it is for good reason that the age of the protestant reformation is considered [the confessional age](https://www.britannica.com/place/Germany/The-confessional-age-1555-1648). At this time, this site includes the following historic documents from this golden age of Church history:
 
 - [The Westminster Confession of faith](https://confessionalchristianity.com/?search=document:WCF)
 - [The Westminster Shorter Catechism](https://confessionalchristianity.com/?search=document:WSC)
@@ -14,10 +15,13 @@ While we acknowledge the bounds of confessional christianity extends beyond the 
 - [The Thirty Nine Articles of Religion](https://confessionalchristianity.com/?search=document:TAR)
 - [Martin Luther's 95 Theses](https://confessionalchristianity.com/?search=document:ML9T)
 
-There are many lesser known catechisms and confessions which may be surfaced here in the future.
+There are many lesser known catechisms and confessions from this period which may be surfaced here in the future.
 
 ## Acknowledgements
-We would like to acknowledge the makers of [Reformed Standards](https://reformedstandards.com/) for their excellent work. This website would not exist without being able to build on top of their [open source repository of machine readable content](https://github.com/reformed-standards/compendium). We hope this website is of some use to you as you grow in the knowledge of our LORD and Savior Jesus Christ. May God bless us richly as we seek to grow in the knowledge of his Son, and in doing so, love him more as we ought.
+We would like to acknowledge the makers of [Reformed Standards](https://reformedstandards.com/) for their excellent work. This website would not exist without being able to build on top of their [open source repository of machine readable content](https://github.com/reformed-standards/compendium).
+
+May God bless us richly as we seek to grow in the knowledge of his Son, and in doing so, begin to love him more as we ought.
 
 > The grass whithers and the flower fades but the Word of our God shall abide forever.
-~ Isaiah 40:8
+
+> ~ Isaiah 40:8
